@@ -4,17 +4,17 @@ create photo page
 
 <div class='navigation'>
 $if(prev)$
-    <a title='prev photo: $prev.title$' href='$prev.name$.xhtml'>
+    <a class='prev' title='prev photo: $prev.title$' href='$prev.name$.xhtml'>
         <span class='prev'></span>
     </a>
 $else$
     <span class='prev disabled'></span>
 $endif$
-    <a title='album: $album.title$' href='index.xhtml'>
+    <a class='parent' title='album: $album.title$' href='index.xhtml'>
         <span class='parent'></span>
     </a>
 $if(next)$
-    <a title='next photo: $next.title$' href='$next.name$.xhtml'>
+    <a class='next' title='next photo: $next.title$' href='$next.name$.xhtml'>
         <span class='next'></span>
     </a>
 $else$
